# OCR-classifier

./: CMakeLists.txt  east_detector.h  main.cpp  ocr_classifier.h  ocr_classifier.hpp  ocr_words_extractor.hpp  readme.md  utils.hpp
